kubernetes/apps/tautulli/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: tautulli
  labels:
    app.kubernetes.io/name: tautulli
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      name: tautulli
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      containers:
        - name: tautulli
          image: ghcr.io/tautulli/tautulli:v2.15.2
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 1m
              memory: 220Mi
            limits:
              memory: 220Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
