kubernetes/apps/tautulli/app/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-private
  namespace: tautulli
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tautulli.homelab-peej.dev
      secretName: tautulli-internal-tls-secret
  rules:
    - host: tautulli.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: tautulli
                port:
                  number: 8181
            path: /
            pathType: Prefix
